<resources>
    <string name="app_name">Resuelvelo</string>

    <!-- MAIN -->
    <string name="bienvenido">!Bienvenidos!</string>
    <string name="resuelvelo">¡Resuelvelo!</string>
    <string name="empresario">Empresario</string>
    <string name="empleado">Empleado</string>
    <string name="opcion">Escoja una opción</string>

    <string name="dominio">\@resuelvelo.es</string>

    <!-- LogeoEmpresario -->

    <string name="email">&#160;&#160;Email</string>
    <string name="contraseña">&#160;&#160;Contraseña</string>
    <string name="entra">Entra</string>
    <string name="registrate">Registrate</string>
    <string name="perdida">¿Contraseña perdida?</string>
    <string name="HolaE">¡Bienvenido Empresario/a!</string>
    <string name="entrarcon">Entra con</string>


    <!-- LogeoEmpresario -->
    <string name="HolaEm">¡Bienvenido Empleado/a!</string>


    <!-- RegistroEmpresario -->

    <string name="registro">Hola, Registrate!</string>
    <string name="nombreEmpresario">Nombre:</string>
    <string name="displayNameEmpresa">&#160;Nombre</string>
    <string name="email2">&#160;Email</string>
    <string name="contraseña2">&#160;Contraseña</string>
    <string name="confContraseña">&#160;Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="salir">Cerrar sesion</string>

    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>

    <!-- Crear Incidencia -->
    <string name="departamentotitulo">departamento</string>
    <string name="destinatariotitulo">destinatario</string>
    <string name="motivotitulo">motivo</string>
    <string name="prioridad">prioridad</string>
    <string name="botonenviar">e n v i a r</string>


    <!-- Perfil Empresario -->
    <string name="empresas">Mis empresas</string>

    <!-- Perfil Empresa -->
    <string name="grupos">crear departamento</string>

    <!-- Perfil Empresario -->
    <string name="creaEmp">Crear empresa</string>
    <string name="nombreEmp">Nombre de la empresa</string>
    <string name="fechaEmp">Fecha de fundación</string>
    <string name="descEmp">Descripción de la empresa</string>
    <string name="logoEmp">Logo de la empresa</string>

    <!-- Menu -->
    <string name="imagenP">Imagen de perfil</string>

    <!-- spinner3 -->
    <string-array name="motivo">
        <item>Fallo de impresora</item>
        <item>Fallo de Sistema Operativo</item>
        <item>Falla el ordenador</item>
        <item>Pantalla sin señal</item>
        <item>Proyector estropeado</item>
        <item>Otros</item>
    </string-array>

    <!-- spinner4 -->
    <string-array name="prioridad">
        <item>Prioridad Alta</item>
        <item>Prioridad Media</item>
        <item>Prioridad Baja</item>
    </string-array>

    <!-- Prioridad -->
    <string name="alta">Prioridad Alta</string>
    <string name="media">Prioridad Media</string>
    <string name="baja">Prioridad Baja</string>

    <!-- Dialog -->
    <string name="nombreDep">Nombre del departamento:</string>
    <string name="nombrePer">Nombre del emplead@:</string>
    <string name="correo">Correo emplead@:</string>
    <string name="title_activity_tab_empleado">TabActivityEmpleado</string>
    <string name="tab_text_1">Prioridad Baja</string>
    <string name="tab_text_2">Prioridad Media</string>
    <string name="tab_text_3">Prioridad Alta</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Ver incidencias -->
    <string name="lista_incidencias">Lista de Incidencias</string>

    Lista de Incidencias
    <!-- Incidencia Completa -->
    <string name="titulo"><u>Incidencia</u></string>


</resources>
