<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/registro"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <EditText
            android:id="@+id/Nnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/nombre"
            android:inputType="text" />

        <EditText
            android:id="@+id/Nemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/contraseña"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirmarContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/confContraseña"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/registrarse" />

        <TextView
            android:id="@+id/entre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="Ya se ha registrado? ¡Entre!"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>