<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegistroEmpleado"
    android:background="@mipmap/fondo1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/registro"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />


        <EditText
            android:id="@+id/displayName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/bordes"
            android:hint="@string/displayNameEmpresa"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/email"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/bordes"
            android:hint="@string/email2"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-55dp">

        <TextView
            android:id="@+id/dominio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="190dp"
            android:textSize="20sp"
            android:text="@string/dominio"
            android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/bordes"
            android:hint="@string/contraseña2"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        </LinearLayout>
        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/bordes"
            android:hint="@string/confContraseña"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@+id/registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="#00cc99"
            android:text="@string/registrarse"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="Ya se ha registrado? ¡Entre!"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            tools:ignore="HardcodedText" />
    </LinearLayout>


</ScrollView>