<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CrearEmpresa"
    android:background="@mipmap/fondo1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235"
            tools:ignore="UselessParent">


            <TextView
                android:id="@+id/creEmp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/creaEmp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />


            <EditText
                android:id="@+id/nombreEmp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="@drawable/bordes"
                android:hint="@string/nombreEmp"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/fechaEmp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="@drawable/bordes"
                android:hint="@string/fechaEmp"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/descEmp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="@drawable/bordes"
                android:hint="@string/descEmp"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/logoEmp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/add"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="-40dp"
                android:src="@mipmap/add" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/registrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="#00cc99"
                android:text="@string/registrarse"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>