<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo1"
    tools:context="com.example.sebas_pc.resuelvelo.view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/resuelvelo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="27sp"
                android:textColor="@android:color/white"
                android:text="@string/resuelvelo"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="20dp">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@mipmap/resuelvelo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bienvenido"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bienvenido"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/opcion"/>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/empresario"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:onClick="empresario"
                android:text="@string/empresario"
                android:background="#00cc99"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/empleado"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="empleado"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/empleado"
                android:background="#00cc99"/>

        </LinearLayout>



    </LinearLayout>
</LinearLayout>