<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo1"
    tools:context="com.example.sebas_pc.resuelvelo.view.LogueoEmpresario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="27sp"
                android:textColor="@android:color/white"
                android:text="@string/HolaE"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/entra" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/entrarcon"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/entra" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="20dp">


            <Button
                android:id="@+id/google"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@mipmap/goog" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="15dp"
                android:background="@drawable/bordes"
                android:drawableStart="@mipmap/user"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp"
                android:paddingStart="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/contra"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/constraseña"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/bordes"
                android:drawableStart="@mipmap/candado"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:paddingStart="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/entra"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/entra"
                android:background="#00cc99"/>

        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginTop="90dp">-->

            <!--<View-->
                <!--android:id="@+id/firstDivide3"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="5"-->
                <!--android:background="#ADABAB" />-->
        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/contraPerdida"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/perdida" />

            <TextView
                android:id="@+id/registrarte"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/registrate" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>