<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Letras Departamento -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:text="@string/departamentotitulo"
            android:textSize="24sp"
            android:textColor="#7426b7" />

        <!-- Relative que incluira el spinner de departamento -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_spinner">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           />

        </RelativeLayout>

        <!-- Letras Destinatario -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:text="@string/destinatariotitulo"
            android:textSize="24sp"
            android:textColor="#7426b7" />

        <!-- Relative que incluira el spinner de destinatario -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_spinner">

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        </RelativeLayout>

        <!-- Letras Motivo -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:text="@string/motivotitulo"
            android:textSize="24sp"
            android:textColor="#7426b7" />

        <!-- Relative que incluira el spinner de motivo -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_spinner">

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#6eda1e"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/botonenviar" />

    </LinearLayout>

</ScrollView>