<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.sebas_pc.resuelvelo.view.PerfilEmpresario"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:id="@+id/activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@mipmap/background_profile" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_marginTop="180dp"
            android:layout_height="60dp"
            android:background="@mipmap/background_profile2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagenP"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/icon_profile"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imagenP2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="15dp"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
        android:id="@+id/displayNameEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="95dp"
        android:textColor="@color/tw__solid_white"
        android:textSize="20sp" />

        <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/tw__solid_white"
        android:text="@string/app_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="add"
            android:padding="10dp"
            android:text="@string/empresas"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/mas"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="-50dp"
            android:onClick="add" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="250dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <Button
        android:id="@+id/salir"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="700dp"
        android:layout_marginBottom="50dp"
        android:onClick="salir"
        android:text="@string/salir" />

</FrameLayout>

    </ScrollView>